--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "browser-sync-spa": "~1.0.3",
     "http-proxy-middleware": "~0.9.0",
     "chalk": "~1.1.1",
-    "uglify-save-license": "~0.4.1",
-    "bower": "~1.6.0"
+    "uglify-save-license": "~0.4.1"
+  },
+  "dependencies": {
+    "bower": "1.6.x"
   },
   "engines": {
     "node": ">=0.10.0"
