--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "test": "gulp test",
-    "postinstall": "./node_modules/bower/bin/bower install"
+    "postinstall": "./node_modules/bower/bin/bower install && ./node_modules/gulp/bin/gulp"
   },
   "devDependencies": {
     "estraverse": "~4.1.0",
@@ -50,7 +50,8 @@
     "uglify-save-license": "~0.4.1"
   },
   "dependencies": {
-    "bower": "1.8.0"
+    "bower": "1.8.0",
+    "gulp": "3.9.1"
   },
   "engines": {
     "node": ">=0.10.0"
