--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "test": "gulp test",
-    "postinstall": "./node_modules/bower/bin/bower install && gulp"
+    "postinstall": "./node_modules/bower/bin/bower install && ./node_modules/gulp/bin/gulp"
   },
   "devDependencies": {
     "estraverse": "~4.1.0",
